--- a/artcontrolme.ipynb
+++ b/artcontrolme.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:73e0a2b358d4a003328ef798d7568c22bc4abcd8935b0ee51224245c21943d7e"
+  "signature": "sha256:135206d8943bf4bce63d6a324fdac7fad22720e75f5501b555e0b194732e13c0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -42,7 +42,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -53,7 +53,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 44
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -64,7 +64,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 45
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -75,7 +75,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -86,7 +86,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 47
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -924,7 +924,7 @@
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -938,7 +938,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 49,
+       "prompt_number": 7,
        "text": [
         "[u'644.meta',\n",
         " u'auckland-pencil-drawings.wp',\n",
@@ -1761,7 +1761,7 @@
        ]
       }
      ],
-     "prompt_number": 49
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -2190,7 +2190,7 @@
        ]
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -2203,7 +2203,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 51
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -2217,7 +2217,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 52
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -2228,7 +2228,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 53
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -2242,7 +2242,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 54
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -2275,7 +2275,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -2289,13 +2289,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 56,
+       "prompt_number": 14,
        "text": [
         "{'2011-08-03 05:13:40': 'les-barany-advice'}"
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -2309,13 +2309,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 57,
+       "prompt_number": 15,
        "text": [
         "[('2011-08-03 05:13:40', 'les-barany-advice')]"
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -2326,7 +2326,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 58
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -2337,7 +2337,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 59
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -2348,7 +2348,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 60
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -2359,7 +2359,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 61
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -2373,7 +2373,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 62,
+       "prompt_number": 20,
        "text": [
         "['Les Barany Advice\\n',\n",
         " 'les-barany-advice\\n',\n",
@@ -2384,7 +2384,7 @@
        ]
       }
      ],
-     "prompt_number": 62
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -2395,7 +2395,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 63
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -2684,7 +2684,13 @@
         "{'date': '2013-05-30 11:53:01', 'tags': 'Digital Painting,GIMP,portrait,reddit,RedditGetsDrawn', 'name': 'May Reddit Drawn Dump', 'title': 'gjgj'}\n",
         "{'date': '2013-01-11 22:44:46', 'tags': 'conceptart,digital,environment,GIMP', 'name': 'AuxWelTak', 'title': 'auxweltak'}\n",
         "{'date': '2013-03-17 16:38:41', 'tags': 'draw,kobo,RedditGetsDrawn', 'name': 'RedditGetsDrawn Kobo Sketches', 'title': 'redditgetsdrawn-kobo-sketches'}\n",
-        "{'date': '2013-07-12 03:53:44', 'tags': 'draw,female,pencil,portrait', 'name': 'July portrait', 'title': 'july-portrait'}\n",
+        "{'date': '2013-07-12 03:53:44', 'tags': 'draw,female,pencil,portrait', 'name': 'July portrait', 'title': 'july-portrait'}\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
         "{'date': '2013-12-20 14:24:08', 'tags': 'concept art,draw,ideas,pencil,sketchbook', 'name': 'Ham sketchbook', 'title': 'ham-sketchbook'}\n",
         "{'date': '2013-06-10 14:55:00', 'tags': 'draft,draw', 'name': 'None', 'title': '5121'}\n",
         "{'date': '2013-04-07 02:27:55', 'tags': 'draw', 'name': 'March concept title', 'title': 'march-concept-title'}\n",
@@ -2707,14 +2713,7 @@
         "{'date': '2014-01-16 00:34:17', 'tags': 'chracter,Digital Painting,game of thrones,GIMP,television', 'name': 'Game Of Thrones - Digital Drawing', 'title': 'got-digdraw'}\n",
         "{'date': '2012-04-25 03:01:56', 'tags': 'draft,draw', 'name': 'None', 'title': '318'}\n",
         "{'date': '2014-10-28 19:45:06', 'tags': 'Digital Painting,GIMP,line', 'name': 'robot bug trex', 'title': 'robot-bug-trex'}\n",
-        "{'date': '2012-06-13 14:54:11', 'tags': 'color,digital,GIMP,landscape', 'name': 'Landscape Binge Braid', 'title': 'landscape-binge-braid'}"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "{'date': '2012-06-13 14:54:11', 'tags': 'color,digital,GIMP,landscape', 'name': 'Landscape Binge Braid', 'title': 'landscape-binge-braid'}\n",
         "{'date': '2012-06-18 16:54:51', 'tags': '3d,blender,walk cycle', 'name': 'Dark Places', 'title': 'dark-places'}\n",
         "{'date': '2013-04-02 13:01:06', 'tags': 'draft,draw', 'name': 'drawings-pencil', 'title': 'drawings-pencil'}\n",
         "{'date': '2013-02-06 22:27:33', 'tags': 'draft,draw', 'name': 'None', 'title': '2535'}\n",
@@ -4818,119 +4817,118 @@
         "name\n",
         "title\n",
         "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name\n",
-        "title\n",
-        "date\n",
-        "tags\n",
-        "name"
+        "tags\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
+        "title\n",
+        "date\n",
+        "tags\n",
+        "name\n",
         "title\n",
         "date\n",
         "tags\n",
@@ -6726,11 +6724,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "im ogoing to just "
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
