--- a/test.ipynb
+++ b/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:89c5f1dbbdd3eef2421c0909525cbda4ff0e3781aa862fdd6d0eff70c5413f3f"
+  "signature": "sha256:030b481e0636cd7f84022529201371246775e127c0cd1b85982dbbf8f5e65691"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -68,10 +68,10 @@
       "    return os.system('scp \"%s\":\"%s\" ls -R' % (remotehost, remotefolder))\n",
       "\n",
       "def rsyzmpush(localfile, remotehost, remotefile):\n",
-      "    return os.system('rsync -azp \"%s\" \"%s:%s\"' % (localfile, remotehost, remotefile))\n",
+      "    return os.system('rsync -azP \"%s\" \"%s:%s\"' % (localfile, remotehost, remotefile))\n",
       "\n",
       "def rsyzmpull(remotehost, remotefile, localfile):\n",
-      "    return os.system('rsync -azp \"%s:%s\": \"%s\"' % (localfile, remotehost, remotefile))\n",
+      "    return os.system('rsync -azP \"%s:%s\": \"%s\"' % (localfile, remotehost, remotefile))\n",
       "\n",
       "def rsyzmloc(localfile, dilocfil):\n",
       "    return os.system('rsync -a \"%s\" \"%s' % (localfile, dilocfil))"
@@ -79,7 +79,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
