--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c5913ee911cd3c0dc4ae308848642790a54d215ce04edb1c45c1612d3d3adaf9"
+  "signature": "sha256:f8d8f47fefda3cde1a75353618ae1890c1ea9bb3321d7f4d94a3395f9e5af5a8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -65,7 +65,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -76,7 +76,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -87,7 +87,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -98,7 +98,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -109,7 +109,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -120,7 +120,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -134,7 +134,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -145,7 +145,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -158,7 +158,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -170,7 +170,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -181,7 +181,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -202,7 +202,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -213,7 +213,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -224,7 +224,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -235,7 +235,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -246,7 +246,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -259,7 +259,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -270,7 +270,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -320,7 +320,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -332,7 +332,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -343,7 +343,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -393,7 +393,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -407,13 +407,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 24,
+       "prompt_number": 23,
        "text": [
-        "{'title': u'My husband and I dressed up as naughty elves on the shelf for the annual Christmas parade. We ran around tossing snowman poop (marshmallows) and spraying silly string - the kids loved it!'}"
+        "{'title': u'Can anyone draw this picture of me when I was a nerdy hippie child of the 90s?'}"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -424,7 +424,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -434,19 +434,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "UnicodeEncodeError",
-       "evalue": "'ascii' codec can't encode character u'\\xe9' in position 2143: ordinal not in range(128)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-31-a321f1883ad7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdocre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ascii'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ignore'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mUnicodeEncodeError\u001b[0m: 'ascii' codec can't encode character u'\\xe9' in position 2143: ordinal not in range(128)"
-       ]
-      }
-     ],
-     "prompt_number": 31
+     "outputs": [],
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -457,7 +446,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -468,7 +457,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -481,7 +470,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -492,7 +481,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -502,7 +491,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -512,7 +511,26 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 91,
+       "text": [
+        "256"
+       ]
+      }
+     ],
+     "prompt_number": 91
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 91
     },
     {
      "cell_type": "code",
