todo img folders

--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:19209bbf0fab1603ac493897aee37d31b8436c83a531e0240dc3c812a6f43191"
+  "signature": "sha256:aca6eff578a3c5c1fd65c37e7cd7ffee4c248ae4371f1f503b46d4cec4208e0f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -38,7 +38,11 @@
       "\n",
       "Upload artwork to user. Sends them a message on redditgetsdrawn with links. \n",
       "\n",
-      "More pandas"
+      "More pandas\n",
+      "\n",
+      "\n",
+      "Currently saves username-line-bw-colour.png to imgs folder. Instead get it to save to imgs/year/month/day/usernames.png.\n",
+      "Script checks the year/month/day and if folder isnt created, it creates it. If folder is there, exit. \n"
      ]
     },
     {
@@ -326,343 +330,67 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ls"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\u001b[0m\u001b[01;35mAdamBarnhouse-bw.png\u001b[0m         \u001b[01;35mneszero-line.png\u001b[0m"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r\n",
-        "\u001b[01;35mAdamBarnhouse-colour.png\u001b[0m     \u001b[01;35mplainclotheswoman-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mAdamBarnhouse-line.png\u001b[0m       \u001b[01;35mplainclotheswoman-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mBeyondMars-bw.png\u001b[0m            \u001b[01;35mplainclotheswoman-line.png\u001b[0m\r\n",
-        "\u001b[01;35mBeyondMars-colour.png\u001b[0m        \u001b[01;35mQuackattackaggie-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mBeyondMars-line.png\u001b[0m          \u001b[01;35mQuackattackaggie-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mBonAnchovy-bw.png\u001b[0m            \u001b[01;35mQuackattackaggie-line.png\u001b[0m\r\n",
-        "\u001b[01;35mBonAnchovy-colour.png\u001b[0m        \u001b[01;35mRunOttawa613-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mBonAnchovy-line.png\u001b[0m          \u001b[01;35mRunOttawa613-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mcrayolalightblue-bw.png\u001b[0m      \u001b[01;35mRunOttawa613-line.png\u001b[0m\r\n",
-        "\u001b[01;35mcrayolalightblue-colour.png\u001b[0m  \u001b[01;35mSalerno1717-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mcrayolalightblue-line.png\u001b[0m    \u001b[01;35mSalerno1717-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mDreababii-bw.png\u001b[0m             \u001b[01;35mSalerno1717-line.png\u001b[0m\r\n",
-        "\u001b[01;35mDreababii-colour.png\u001b[0m         \u001b[01;35mseahorseVT-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mDreababii-line.png\u001b[0m           \u001b[01;35mseahorseVT-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mJasperthecat77-bw.png\u001b[0m        \u001b[01;35mseahorseVT-line.png\u001b[0m\r\n",
-        "\u001b[01;35mJasperthecat77-colour.png\u001b[0m    \u001b[01;35mshripityshripit-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mJasperthecat77-line.png\u001b[0m      \u001b[01;35mshripityshripit-colour.png\u001b[0m\r\n",
-        "\u001b[01;35m_jazmin-bw.png\u001b[0m               \u001b[01;35mshripityshripit-line.png\u001b[0m\r\n",
-        "\u001b[01;35m_jazmin-colour.png\u001b[0m           \u001b[01;35mstarienite-bw.png\u001b[0m\r\n",
-        "\u001b[01;35m_jazmin-line.png\u001b[0m             \u001b[01;35mstarienite-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mJEWPACOLYPSE-bw.png\u001b[0m          \u001b[01;35mstarienite-line.png\u001b[0m\r\n",
-        "\u001b[01;35mJEWPACOLYPSE-colour.png\u001b[0m      \u001b[01;35mTD2705-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mJEWPACOLYPSE-line.png\u001b[0m        \u001b[01;35mTD2705-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mJoisofLife-bw.png\u001b[0m            \u001b[01;35mTD2705-line.png\u001b[0m\r\n",
-        "\u001b[01;35mJoisofLife-colour.png\u001b[0m        \u001b[01;35mThe_Beaner-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mJoisofLife-line.png\u001b[0m          \u001b[01;35mThe_Beaner-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mlabatomi-bw.png\u001b[0m              \u001b[01;35mThe_Beaner-line.png\u001b[0m\r\n",
-        "\u001b[01;35mlabatomi-colour.png\u001b[0m          \u001b[01;35mTHORGNASH-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mlabatomi-line.png\u001b[0m            \u001b[01;35mTHORGNASH-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mLongDistanceGuyy-bw.png\u001b[0m      \u001b[01;35mTHORGNASH-line.png\u001b[0m\r\n",
-        "\u001b[01;35mLongDistanceGuyy-colour.png\u001b[0m  \u001b[01;35muhhhname-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mLongDistanceGuyy-line.png\u001b[0m    \u001b[01;35muhhhname-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mMrsEvil-bw.png\u001b[0m               \u001b[01;35muhhhname-line.png\u001b[0m\r\n",
-        "\u001b[01;35mMrsEvil-colour.png\u001b[0m           \u001b[01;35myouwinabagel-bw.png\u001b[0m\r\n",
-        "\u001b[01;35mMrsEvil-line.png\u001b[0m             \u001b[01;35myouwinabagel-colour.png\u001b[0m\r\n",
-        "\u001b[01;35mneszero-bw.png\u001b[0m               \u001b[01;35myouwinabagel-line.png\u001b[0m\r\n",
-        "\u001b[01;35mneszero-colour.png\u001b[0m\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 230
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "for lisa in lisauth:\n",
-      "    print lisa + '-line.png'\n",
+      "    #print lisa + '-line.png'\n",
       "    im = Image.new(\"RGB\", (512, 512), \"white\")\n",
       "    im.save(lisa + '-line.png')\n",
       "    im = Image.new(\"RGB\", (512, 512), \"white\")\n",
       "    im.save(lisa + '-bw.png')\n",
       "\n",
-      "    print lisa + '-bw.png'\n",
+      "    #print lisa + '-bw.png'\n",
       "    im = Image.new(\"RGB\", (512, 512), \"white\")\n",
       "    im.save(lisa + '-colour.png')\n",
       "\n",
-      "    print lisa + '-colour.png'"
+      "    #print lisa + '-colour.png'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 231
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "lisauth"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 233,
        "text": [
-        "Jasperthecat77-line.png\n",
-        "Jasperthecat77-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Jasperthecat77-colour.png\n",
-        "BeyondMars-line.png\n",
-        "BeyondMars-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "BeyondMars-colour.png\n",
-        "plainclotheswoman-line.png\n",
-        "plainclotheswoman-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "plainclotheswoman-colour.png\n",
-        "Quackattackaggie-line.png\n",
-        "Quackattackaggie-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Quackattackaggie-colour.png\n",
-        "JEWPACOLYPSE-line.png\n",
-        "JEWPACOLYPSE-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "JEWPACOLYPSE-colour.png\n",
-        "Dreababii-line.png\n",
-        "Dreababii-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Dreababii-colour.png\n",
-        "_jazmin-line.png\n",
-        "_jazmin-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "_jazmin-colour.png\n",
-        "crayolalightblue-line.png\n",
-        "crayolalightblue-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "crayolalightblue-colour.png\n",
-        "BonAnchovy-line.png\n",
-        "BonAnchovy-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "BonAnchovy-colour.png\n",
-        "uhhhname-line.png\n",
-        "uhhhname-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "uhhhname-colour.png\n",
-        "starienite-line.png\n",
-        "starienite-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "starienite-colour.png\n",
-        "AdamBarnhouse-line.png\n",
-        "AdamBarnhouse-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "AdamBarnhouse-colour.png\n",
-        "shripityshripit-line.png\n",
-        "shripityshripit-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "shripityshripit-colour.png\n",
-        "TD2705-line.png\n",
-        "TD2705-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "TD2705-colour.png\n",
-        "RunOttawa613-line.png\n",
-        "RunOttawa613-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "RunOttawa613-colour.png\n",
-        "labatomi-line.png\n",
-        "labatomi-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "labatomi-colour.png\n",
-        "youwinabagel-line.png\n",
-        "youwinabagel-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "youwinabagel-colour.png\n",
-        "THORGNASH-line.png\n",
-        "THORGNASH-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "THORGNASH-colour.png\n",
-        "neszero-line.png\n",
-        "neszero-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "neszero-colour.png\n",
-        "Salerno1717-line.png\n",
-        "Salerno1717-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Salerno1717-colour.png\n",
-        "LongDistanceGuyy-line.png\n",
-        "LongDistanceGuyy-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "LongDistanceGuyy-colour.png\n",
-        "seahorseVT-line.png\n",
-        "seahorseVT-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "seahorseVT-colour.png\n",
-        "The_Beaner-line.png\n",
-        "The_Beaner-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "The_Beaner-colour.png\n",
-        "JoisofLife-line.png\n",
-        "JoisofLife-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "JoisofLife-colour.png\n",
-        "MrsEvil-line.png\n",
-        "MrsEvil-bw.png"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "MrsEvil-colour.png\n"
+        "['Jasperthecat77',\n",
+        " 'BeyondMars',\n",
+        " 'plainclotheswoman',\n",
+        " 'Quackattackaggie',\n",
+        " 'JEWPACOLYPSE',\n",
+        " 'Dreababii',\n",
+        " '_jazmin',\n",
+        " 'crayolalightblue',\n",
+        " 'BonAnchovy',\n",
+        " 'uhhhname',\n",
+        " 'starienite',\n",
+        " 'AdamBarnhouse',\n",
+        " 'shripityshripit',\n",
+        " 'TD2705',\n",
+        " 'RunOttawa613',\n",
+        " 'labatomi',\n",
+        " 'youwinabagel',\n",
+        " 'THORGNASH',\n",
+        " 'neszero',\n",
+        " 'Salerno1717',\n",
+        " 'LongDistanceGuyy',\n",
+        " 'seahorseVT',\n",
+        " 'The_Beaner',\n",
+        " 'JoisofLife',\n",
+        " 'MrsEvil']"
        ]
       }
      ],
-     "prompt_number": 229
+     "prompt_number": 233
     },
     {
      "cell_type": "markdown",
