yr/m/d img dir created

--- a/wain.ipynb
+++ b/wain.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:59b3e7d77bd809f257b7cf589e4de9a91fee94693e406e9b618eeb358513c4c5"
+  "signature": "sha256:f21f28c43c7a69b451b815f472dcfbfb5e0027b337d4eca42121df6867e03ad9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -529,7 +529,7 @@
        "output_type": "pyout",
        "prompt_number": 9,
        "text": [
-        "'\\x02\\xd6_\\xc7\\xe10hK8N63h\\xb3\\x85a'"
+        "'\\xb4\\xd6\\x9al\\'\\t\\xfe\\xb5|G[\"\\x9d\\x12\\xa4~'"
        ]
       }
      ],
@@ -549,7 +549,7 @@
        "output_type": "pyout",
        "prompt_number": 10,
        "text": [
-        "'12:18:08'"
+        "'19:37:49'"
        ]
       }
      ],
@@ -563,19 +563,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "TypeError",
-       "evalue": "unbound method dictcreate() must be called with DictNows instance as first argument (got str instance instead)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-35-86f946841cfd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mDictNows\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdictcreate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'check'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mTypeError\u001b[0m: unbound method dictcreate() must be called with DictNows instance as first argument (got str instance instead)"
-       ]
-      }
-     ],
-     "prompt_number": 35
+     "outputs": [],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -590,13 +579,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 12,
        "text": [
         "{'name': 'wcm'}"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -607,7 +596,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -645,7 +634,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -656,7 +645,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -667,7 +656,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -678,7 +667,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -698,7 +687,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -712,17 +701,17 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 34,
+       "prompt_number": 19,
        "text": [
         "{'last-name': 'mckee',\n",
         " 'reason': 'Reason: ',\n",
         " 'signin-comment': 'Comments: ',\n",
         " 'signin-date': '19-Dec-2014',\n",
-        " 'signin-hrmin': '12:19:51'}"
+        " 'signin-hrmin': '19:38:08'}"
        ]
       }
      ],
-     "prompt_number": 34
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -737,13 +726,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 20,
        "text": [
-        "'{\"signin-date\": \"19-Dec-2014\", \"reason\": \"Reason: \", \"signin-comment\": \"Comments: \", \"last-name\": \"mckee\", \"signin-hrmin\": \"12:18:25\"}'"
+        "'{\"signin-date\": \"19-Dec-2014\", \"reason\": \"Reason: \", \"signin-comment\": \"Comments: \", \"last-name\": \"mckee\", \"signin-hrmin\": \"19:38:08\"}'"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -755,7 +744,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -767,7 +756,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -781,13 +770,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 23,
        "text": [
         "'{\"signin hrmin\": \"15:09:51\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"sunny and mum is back\", \"lastname\": \"Mckee\", \"signin date\": \"02-Dec-2014\"}{\"signin-date\": \"09-Dec-2014\", \"reason\": \"esw\", \"signin-comment\": \"checking this on the bus\", \"last-name\": \"mckee\", \"signin-hrmin\": \"08:30:54\"}{\"signin-date\": \"10-Dec-2014\", \"reason\": \"eefwe\", \"signin-comment\": \"erw\", \"last-name\": \"mckee\", \"signin-hrmin\": \"01:16:44\"}{\"signin-date\": \"10-Dec-2014\", \"reason\": \"esw\", \"signin-comment\": \"blahblah\", \"last-name\": \"mckee\", \"signin-hrmin\": \"01:17:36\"}{\"signin-date\": \"17-Dec-2014\", \"reason\": \"Reason: \", \"signin-comment\": \"Comments: \", \"last-name\": \"mckee\", \"signin-hrmin\": \"23:02:46\"}{\"signin-date\": \"18-Dec-2014\", \"reason\": \"Reason: \", \"signin-comment\": \"Comments: \", \"last-name\": \"mckee\", \"signin-hrmin\": \"04:05:42\"}'"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -798,7 +787,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -812,13 +801,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 24,
+       "prompt_number": 25,
        "text": [
         "'\"{\\\\\"signin hrmin\\\\\": \\\\\"15:09:51\\\\\", \\\\\"reason\\\\\": \\\\\"ESW\\\\\", \\\\\"firstname\\\\\": \\\\\"William\\\\\", \\\\\"signin comment\\\\\": \\\\\"sunny and mum is back\\\\\", \\\\\"lastname\\\\\": \\\\\"Mckee\\\\\", \\\\\"signin date\\\\\": \\\\\"02-Dec-2014\\\\\"}{\\\\\"signin-date\\\\\": \\\\\"09-Dec-2014\\\\\", \\\\\"reason\\\\\": \\\\\"esw\\\\\", \\\\\"signin-comment\\\\\": \\\\\"checking this on the bus\\\\\", \\\\\"last-name\\\\\": \\\\\"mckee\\\\\", \\\\\"signin-hrmin\\\\\": \\\\\"08:30:54\\\\\"}{\\\\\"signin-date\\\\\": \\\\\"10-Dec-2014\\\\\", \\\\\"reason\\\\\": \\\\\"eefwe\\\\\", \\\\\"signin-comment\\\\\": \\\\\"erw\\\\\", \\\\\"last-name\\\\\": \\\\\"mckee\\\\\", \\\\\"signin-hrmin\\\\\": \\\\\"01:16:44\\\\\"}{\\\\\"signin-date\\\\\": \\\\\"10-Dec-2014\\\\\", \\\\\"reason\\\\\": \\\\\"esw\\\\\", \\\\\"signin-comment\\\\\": \\\\\"blahblah\\\\\", \\\\\"last-name\\\\\": \\\\\"mckee\\\\\", \\\\\"signin-hrmin\\\\\": \\\\\"01:17:36\\\\\"}{\\\\\"signin-date\\\\\": \\\\\"17-Dec-2014\\\\\", \\\\\"reason\\\\\": \\\\\"Reason: \\\\\", \\\\\"signin-comment\\\\\": \\\\\"Comments: \\\\\", \\\\\"last-name\\\\\": \\\\\"mckee\\\\\", \\\\\"signin-hrmin\\\\\": \\\\\"23:02:46\\\\\"}{\\\\\"signin-date\\\\\": \\\\\"18-Dec-2014\\\\\", \\\\\"reason\\\\\": \\\\\"Reason: \\\\\", \\\\\"signin-comment\\\\\": \\\\\"Comments: \\\\\", \\\\\"last-name\\\\\": \\\\\"mckee\\\\\", \\\\\"signin-hrmin\\\\\": \\\\\"04:05:42\\\\\"}\"'"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -827,7 +816,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -838,7 +827,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -847,7 +836,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -951,17 +940,14 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "IOError",
-       "evalue": "[Errno 2] No such file or directory: '/home/wcmckee/visignsys/posts/\\x91&\\xbe\\x84\\x13Y\\x04\\xe6\\xcb\\xf4:{/ \\xa2W.html'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-26-b289293d08f3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[1;31m# <codecell>\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 71\u001b[1;33m \u001b[0msavpos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/home/wcmckee/visignsys/posts/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mixtwe\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'.html'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     72\u001b[0m \u001b[0msavpos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[0msavpos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: '/home/wcmckee/visignsys/posts/\\x91&\\xbe\\x84\\x13Y\\x04\\xe6\\xcb\\xf4:{/ \\xa2W.html'"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "sign in complete\n"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -972,7 +958,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -983,7 +969,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -994,7 +980,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -1646,7 +1632,14 @@
         "m\n",
         "e\n",
         "n\n",
-        "t\n",
+        "t"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "s\n",
         ":\n",
         " \n",
@@ -1839,7 +1832,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -1853,7 +1846,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 31,
+       "prompt_number": 32,
        "text": [
         "['{',\n",
         " '\"',\n",
@@ -2683,7 +2676,7 @@
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -2697,13 +2690,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 32,
+       "prompt_number": 33,
        "text": [
         "825"
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -2712,7 +2705,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
