--- a/wcpanda.ipynb
+++ b/wcpanda.ipynb
@@ -70,7 +70,7 @@
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
-        "-0.4945779207227632"
+        "-1.2782579732254964"
        ]
       }
      ],
@@ -90,7 +90,7 @@
        "output_type": "pyout",
        "prompt_number": 4,
        "text": [
-        "0.03530693006123431"
+        "0.8069064490989402"
        ]
       }
      ],
@@ -121,7 +121,7 @@
        "output_type": "pyout",
        "prompt_number": 6,
        "text": [
-        "array([ 0.])"
+        "array([ 0.,  1.])"
        ]
       }
      ],
@@ -382,7 +382,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -393,7 +393,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -410,12 +410,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-20-a5c7e51db938>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbusses\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0musb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbusses\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-18-a5c7e51db938>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbusses\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0musb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbusses\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mNameError\u001b[0m: name 'usb' is not defined"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -433,12 +433,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-21-bd8a70c620a6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mbus\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbusses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mbus\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m<ipython-input-19-bd8a70c620a6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mbus\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbusses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mbus\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;31mNameError\u001b[0m: name 'busses' is not defined"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
